-메인화면, 채팅방 프론트엔드 수정 -채팅방 읽음표시 수정 -갤러리, 내용찾기 N+1 문제 수정 -API 보안 강화 -채팅방 목록 알람 버그 수정 -채팅 시간 표시 변경